# decision-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  DEPENDENCIES.md  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
backend/app/: main.py
backend/app/api/routers/: __init__.py  answer.py  predict.py  query.py
backend/app/core/: __init__.py  config.py  logging_config.py  paths.py
backend/app/schemas/: __init__.py  answer.py  common.py  predict.py  query.py
backend/app/scripts/: __init__.py  build_vector_index.py
backend/app/services/: __init__.py  embedder.py  llm_client.py  llm_zero_shot.py  ml_predictor.py  non_rag_answer.py  query_orchestrator.py  rag_answer_generator.py  rag_retriever.py  vector_store.py
backend/data/chroma_db/: chroma.sqlite3
backend/data/chroma_db_test/: chroma.sqlite3
backend/scripts/: cli_api_tests.py  ingest_conversations.py  run_backend_tests.sh  smoke_api.py  validate_vector_store.py
backend/tests/: test_api_health.py  test_api_validation.py  test_health.py  test_phase16_services.py
docs/: NOTEBOOKS.md
frontend/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  railway.json  tailwind.config.js  tsconfig.json  vite.config.ts
notebooks/: 02_load_inspect_full.ipynb  03_process_conversations_full.ipynb  08_eda_and_cleaning.ipynb  09_data_quality_checkpoint.ipynb  10_eda_validation_cleaned.ipynb  10_priority_labeling.ipynb  README.md  (+4 more)
(+7 files in other folders)
